public/css/style.css
/* Darkmode if we want it  */
/* https://dev.to/ananyaneogi/create-a-dark-light-mode-switch-with-css-variables-34l8 */

:root {
  --Dark_mode: rgb(16, 16, 16);
  --No_dark_mode: white;
  --Taskbar: rgb(56, 29, 42);
  --Taskbar_dm: rgb(28, 15, 19);
  --Button: rgb(69, 105, 144);
  --Button_dm: rgb(17, 75, 95);
  --Text: black;
  --Text_dm: white;
  /* Agreed palette */
  --IndianRed: #e15554;
  --Xiketic: #1b0f13;
  --Alabaster: #f1f2ec;
  --QueenBlue: #466991;
  --MidnightEagleGreen: #114b5f;
}

body {
  height: 100vh;
  background-color: var(--Darkmode);
  background-image: url("/assets/white-abstract-background_23-2148812993.jpg");
  background-size: cover;
}
h1,
h2,
h3,
h4,
h5,
h6,
a {
  font-family: "Oswald", sans-serif;
  /* font-size: 18px; */
  line-height: 1.5;
}

p {
  font-family: Arial, sans-serif;
  /* font-size: 12px; */
  line-height: 1.5;
}
.errStatus {
  height: 100vh;
  background-color: var(--Darkmode);
  background-image: url("/assets/404-pages.png");
  background-size: cover;
}
.background {
  margin-bottom: 60px;
}
/*Header*/
.header-container {
  display: flex;
  background-color: var(--IndianRed);
  min-height: 60px;
}
.button-container {
  min-width: 100%;
}
.cart-button {
  flex-direction: column;
  max-width: 48%;
  max-height: 60px;
  margin: 10px 5px;
}
ul {
  list-style-type: none;
}
ul li {
  display: inline;
}

.button-nav {
  color: var(--Text);
  padding: 5px;
  border-radius: 10px;
  float: left;
  width: auto;
  margin: 5px;
}

.hidden {
  display: none;
}
.login {
  float: right;
  margin-right: 30px;
}
.project-title {
  font-size: 1.5em;
  text-shadow: 1.5px 1.5px var(--Text);
  color: var(--Button);
  margin: 0 8px;
  font-weight: bold;
}
/* buttons */
button {
  color: var(--Alabaster);
  text-transform: uppercase;
  text-decoration: none;
  text-align: center;
  background: var(--QueenBlue);
  padding: 10px;
  border-radius: 5px;
  display: inline-block;
  border: none;
  transition: all 0.4s ease 0s;
}
.foodBankText {
  display: block;
  color: black;
}
.foodBankText:hover {
  text-decoration: none;
  cursor: pointer;
}
.donate-title {
  font-size: xx-large;
  font-weight: 700;
}

.container-half {
  max-width: 39%;
  border: 1px black solid;
  margin: 10px 50px;
  padding: 10px;
  border-radius: 5px;
  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
  justify-content: flex-start;
  flex-grow: 1;
}
.flex {
  display: flex;
}
.flex-grow {
  flex-grow: 1;
  text-align: center;
}

.flex-row {
  flex-direction: row;
  justify-content: space-between;
}
.check-mark {
  justify-content: space-around;
}
/* Login */
.divide-check {
  border-top: 0.1px solid var(--QueenBlue);
}
.divide-check-thick {
  border-top: 5px solid var(--QueenBlue);
}
.container-login {
  border: 1px black solid;
  margin: 50px 50px;
  padding: 10px;
  border-radius: 5px;
  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
}
img {
  height: 100vh;
  width: auto;
}
.divide {
  border-top: 3px solid var(--QueenBlue);
  margin: auto 50px;
}
/* Signup */
.signup {
  color: var(--QueenBlue);
}

/* Footer */
.footer {
  text-align: center;
  padding: 2px;
  font-size: 0.8em;
  background-color: var(--Xiketic);
  color: white;
  position: fixed;
  min-width: 100%;
  left: 0;
  bottom: 0;
  margin-top: 20px;
  min-height: 10px;
  clear: both;
}
.logo {
  height: 150px;
  /* max-width: 100px; */
}

/* Modal --------------- */
.modal,
.modal-box {
  z-index: 900;
}

.modal-sandbox {
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background: var(--Dark_mode);
  opacity: 0.6;
}

.modal {
  display: none;
  position: fixed;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
  overflow: auto;
}
.modal1 {
  display: none;
  position: fixed;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
  overflow: auto;
}

.modal-box {
  position: relative;
  width: 70%;
  max-width: 920px;
  margin: 100px auto;
}

.modal-header {
  padding: 20px 20px;
  background: var(--Button_dm);
  color: #ffffff;
}

.modal-body {
  background: #eceff1;
  padding: 30px 40px;
}
/* Cart modal  */
.items-modal {
  display: inline-block;
  align-items: center;
}
/* Close Button */
.close-modal {
  text-align: right;
  cursor: pointer;
}

.modal-trigger:hover {
  padding: 20px 60px;
}
.card {
  border: 0;
}
/* Dasboard */

.user-profile {
  margin: 30px;
}

/* Home Page */
.home-page {
  display: flex;
  flex-direction: row;
  margin: 5% auto;
}

.article-continer {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  margin: 0 5%;
}

.article-title,
.article {
  text-align: center;
}

.action-container {
  display: flex;
  flex-grow: 1;
  margin: 10% 0;
  background: url(/assets/white-bench.png) center no-repeat;
  min-width: 500px;
  min-height: 417px;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.learn-more-button {
  color: var(--Alabaster);
  text-transform: uppercase;
  text-decoration: none;
  background: var(--QueenBlue);
  padding: 10px;
  border-radius: 5px;
  display: inline-block;
  border: none;
  transition: all 0.4s ease 0s;
  margin: 10px;
  max-width: 35%;
  text-align: center;
  align-self: center;
}

.container-exp-food {
  border: 1px black solid;
  margin: 5% auto;
  padding: 10px 20px 20px;
  border-radius: 5px;
  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
  color: var(--Alabaster);
  background-color: var(--Xiketic);
}

/* User Home Page */

.donate-button {
  color: var(--Alabaster);
  text-transform: uppercase;
  text-decoration: none;
  background: var(--IndianRed);
  padding: 10px;
  border-radius: 5px;
  display: inline-block;
  border: none;
  transition: all 0.4s ease 0s;
  margin: 5% auto;
  text-align: center;
}

.exp-list {
  display: list-item;
  padding: 2%;
  white-space: nowrap;
}

.exp-ul {
  padding: 0;
  margin: 0;
}

/* Hovers  */

button:hover {
  color: var(--Button);
}

.signup:hover {
  text-decoration: none;
  color: var(--MidnightEagleGreen);
}
/* Media Querys */

@media screen and (max-width: 480px) {
  .home-page {
    flex-wrap: wrap;
  }
  .button-nav {
    margin: 0;
  }

  .action-container {
    background: none;
    max-width: 626px;
    min-width: unset;
  }

  .table-header {
    display: none;
    flex-direction: column;
    margin: 5px 10px;
  }

  li {
    display: block;
  }

  .col {
    display: flex;
    color: #6c7a89;
    content: attr(data-label);
    flex-basis: 50%;
    text-align: left;
    color: var(--Xiketic);
    padding: 0;
    font-size: 80%;
  }
  .responsive-table {
    padding: 0;
    margin: 0;
  }
  .table-header {
    flex-direction: row;
  }

  .container-dashboard {
    display: flex;
    flex-direction: column;
  }
  .responsive-table li {
    border-radius: 3px;
    padding: 0px 10px;
    display: flex;
    justify-content: space-between;
    margin-bottom: 25px;
    text-align: left;
  }

  @media screen and (max-width: 850px) {
    .home-page {
      flex-wrap: wrap;
    }

    .table-header,
    .table-row,
    .table-header-heading {
      display: flex;
      line-height: 2em;
      justify-content: center;
    }
    .col {
      padding: 0;
      max-width: 100%;
    }
    .add-food-item {
      width: 100%;
    }

    .add-item-btn-submit {
      width: 100%;
    }

    .cancel-item-btn {
      width: 100%;
    }
    .add-item-btn-submit {
      width: 50%;
    }

    .cancel-item-btn {
      width: 49%;
    }
  }
}

@media screen and (max-width: 1024px) {
  .home-page {
    flex-wrap: wrap;
  }

  .cart-button {
    max-width: 90%;
  }
  .check-mark {
    flex-direction: column;
  }
  .flex-row {
    justify-content: center;
    margin: 10px 50px;
  }

  .container-half {
    max-width: 100%;
    border: 1px black solid;
    margin: 20px 50px;
    padding: 10px;
    border-radius: 5px;
    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
    flex-wrap: wrap;
  }
}
/* CSS FOR CART */
.table-header-text {
  font-weight: 700;
  font-size: 120%;
}
/* CSS FOR DASHBOARD */

.container-dashboard {
  border: 1px black solid;
  margin: 50px 50px;
  padding: 10px;
  border-radius: 5px;
  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
  display: flex;
  flex-direction: row;
  flex-grow: 1;
}

.add-item-btn {
  background-color: #1c0f13;
  color: #f1f2eb;
}
.responsive-table li {
  border-radius: 3px;
  padding: 25px 30px;
  display: flex;
  justify-content: space-between;
  margin-bottom: 25px;
}
.responsive-table .table-header {
  background-color: #e15554;
  font-size: 14px;
  text-transform: uppercase;
  letter-spacing: 0.03em;
  color: #1c0f13;
  border-radius: 10px;
  font-weight: 700;
}
.responsive-table .table-header-heading {
  background-color: none;
  font-size: 16px;
  letter-spacing: 0.03em;
  color: #1c0f13;
  margin-bottom: 0px;
  font-weight: bold;
}
.responsive-table .table-row {
  background-color: #ffffff;
  box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.1);
  border-radius: 10px;
}
.responsive-table .col-1 {
  flex-basis: 10%;
}
.responsive-table .col-2 {
  flex-basis: 40%;
}
.responsive-table .col-3 {
  flex-basis: 25%;
}
.responsive-table .col-4 {
  flex-basis: 25%;
}

.responsive-table .delete-button {
  text-align: end;
  font-size: 30px;
}

/** add food item form - https://codepen.io/ainalem/pen/GRqPwoz **/

.add-food-item {
  width: 50%;
}
.add-food-item-form {
  background-color: #1c0f13;
  border-radius: 20px;
  box-sizing: border-box;
  height: 700px;
  padding: 20px;
  min-width: 320px;
}

.add-food-item-title {
  color: #eee;
  font-family: sans-serif;
  font-size: 36px;
  font-weight: 600;
  margin-top: 30px;
}

.input-container {
  height: 50px;
  position: relative;
  width: 100%;
}

.ic1 {
  margin-top: 40px;
}

.ic2 {
  margin-top: 30px;
}

.input {
  background-color: #303245;
  border-radius: 12px;
  border: 0;
  box-sizing: border-box;
  color: #eee;
  font-size: 18px;
  height: 100%;
  outline: 0;
  padding: 4px 20px 0;
  width: 100%;
}

.cut {
  background-color: #15172b;
  border-radius: 10px;
  height: 20px;
  left: 20px;
  position: absolute;
  top: -20px;
  transform: translateY(0);
  transition: transform 200ms;
  width: 76px;
}

.cut-short {
  width: 50px;
}

.input:focus ~ .cut,
.input:not(:placeholder-shown) ~ .cut {
  transform: translateY(8px);
}

.placeholder {
  color: #65657b;
  font-family: sans-serif;
  left: 20px;
  line-height: 14px;
  pointer-events: none;
  position: absolute;
  transform-origin: 0 50%;
  transition: transform 200ms, color 200ms;
  top: 20px;
}

.input:focus ~ .placeholder,
.input:not(:placeholder-shown) ~ .placeholder {
  transform: translateY(-30px) translateX(10px) scale(0.75);
}

.input:not(:placeholder-shown) ~ .placeholder {
  color: #808097;
}

.input:focus ~ .placeholder {
  color: #dc2f55;
}

.add-item-btn-submit {
  border-radius: 12px;
  border: 0;
  box-sizing: border-box;
  cursor: pointer;
  font-size: 18px;
  height: 50px;
  margin-top: 38px;
  text-align: center;
  background-color: #e15554;
  color: #f1f2ec;
}

.add-item-btn-submit:active {
  background-color: #e15554;
  color: #1c0f13;
}

.cancel-item-btn {
  border-radius: 12px;
  border: 0;
  box-sizing: border-box;
  cursor: pointer;
  font-size: 18px;
  height: 50px;
  margin-top: 38px;
  text-align: center;
  background-color: #f1f2ec;
  color: #1c0f13;
  margin-bottom: 20px;
}
.cancel-item-btn:active {
  background-color: #e15554;
  color: #1c0f13;
}

